--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
 <body>
   <div class="wrapper">
 
-    <!-- HEADER -->
-    <!-- SUB HEAD -->
+    <h1>Welcome to Riyadh</h1>
+    <h2>Where A Traditional Past Meets A Modern Future</h2>
 
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-        
+      <img src="images/transportation/transit.jpg" alt="Escalators in transport">
+      <h3>Travel</h3>
+      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.
+        <br>The country's political, financial and administrative capital is also a city with a faciniating subtext.</p>
+      <h3>History</h3>
+      <p>Riyadh (/rɨˈjɑːd/; Arabic: الرياض‎‎ ar-Riyāḍ Najdi pronounced [er.rɪˈjɑːðˤ], "The Gardens") is the capital and largest city of Saudi
+        <br>Arabia. It is also the capital of Riyadh Province, and belongs to the historical regions of Najid and Al-Yamama. It is
+        <br>situated in the center of the Arabian Peninsula on a large plateau, and is home to 5,254,560 people, and the urban
+        <br>center of a region witha population of close to 7 million people.</p>
+      <img src="images/garden.jpg" alt="Garden history shot">
+      <p>The city is divided into 15 municipal districts, managed by Riyadh Municipality headed by the mayor of Riyadh, and
+        <br>the Riyadh Development Authority, chaired by the governor of Riyadh Province, Khalid bin Bandar Al Saud. The
+        <br>current mayor of Riyadh is Abdullah bin Abdul Rahman Al Mogbel, appointed in 2012. Riyadh has the largest all
+        <br>female university in the world, the Princess Nora bint Abulrahman University.[2] It has been designated as a Beta
+        <br>World City.</p>
+      <img src="images/transportation/camels-in-truck.jpg" alt="camels in truck riyahd">
+      <h3>Sources</h3>
+      <p>Lonely Planet
+      <br>Wikipedia</p>
     </div>
   </div>
 </body>
