--- a/index.html
+++ b/index.html
@@ -2,37 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Code Challenge 1</title>
+  <title>Personal Webpage</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="wrapper">
 
-    <h1>Welcome to Riyadh</h1>
-    <h2>Where A Traditional Past Meets A Modern Future</h2>
+    <h1>A Brief History of Zack</h1>
+    <h2>How the funnest person came to be</h2>
 
     <div id="content">
+      <a href="google.com">Link to Google</a>
+      <img src="images/zspann1.jpg" alt="a photo of zack">
+      <h3>Origins</h3>
+      <p>Zachary Spann was born on the east coast and has lived in Arizona, Alaska, Honduras, and the Netherlands, but grew up in Oregon.
+        <br>After he graduated high school Zack moved to Washington for college, and eventually to San Francisco, where he dropped out of Law School.</p>
+      <h3>Interests</h3>
+      <p>Zack is a very active and healthy guy. He loves rock climbing, hiking, sailing, and biking (when it's not raining).
+        <br>He also likes to read, especially sci-fi books about time travel and space, and watch silly YouTube videos</p>
 
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="images/transportation/transit.jpg" alt="Escalators in transport">
-      <h3>Travel</h3>
-      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.
-        <br>The country's political, financial and administrative capital is also a city with a faciniating subtext.</p>
-      <h3>History</h3>
-      <p>Riyadh (/rɨˈjɑːd/; Arabic: الرياض‎‎ ar-Riyāḍ Najdi pronounced [er.rɪˈjɑːðˤ], "The Gardens") is the capital and largest city of Saudi
-        <br>Arabia. It is also the capital of Riyadh Province, and belongs to the historical regions of Najid and Al-Yamama. It is
-        <br>situated in the center of the Arabian Peninsula on a large plateau, and is home to 5,254,560 people, and the urban
-        <br>center of a region witha population of close to 7 million people.</p>
-      <img src="images/garden.jpg" alt="Garden history shot">
-      <p>The city is divided into 15 municipal districts, managed by Riyadh Municipality headed by the mayor of Riyadh, and
-        <br>the Riyadh Development Authority, chaired by the governor of Riyadh Province, Khalid bin Bandar Al Saud. The
-        <br>current mayor of Riyadh is Abdullah bin Abdul Rahman Al Mogbel, appointed in 2012. Riyadh has the largest all
-        <br>female university in the world, the Princess Nora bint Abulrahman University.[2] It has been designated as a Beta
-        <br>World City.</p>
-      <img src="images/transportation/camels-in-truck.jpg" alt="camels in truck riyahd">
-      <h3>Sources</h3>
-      <p>Lonely Planet
-      <br>Wikipedia</p>
+      <div style="text-align:center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SVfNrNcvlto" frameborder="0" allowfullscreen></iframe>
+      </div>
+
     </div>
   </div>
 </body>
